[gd_scene load_steps=4 format=3 uid="uid://dihsq4ybdfvjj"]

[ext_resource type="Texture2D" uid="uid://c3rydwfsabwmq" path="res://Assets/Slingshot.png" id="1_4nve7"]
[ext_resource type="Script" path="res://Scenes/Slingshot.gd" id="1_dstgh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hftfm"]
radius = 40.0125

[node name="Slingshot" type="Node2D"]
script = ExtResource("1_dstgh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, -61)
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_4nve7")

[node name="LeftLine" type="Line2D" parent="."]
points = PackedVector2Array(-59, -99, 11, -99)
width = 5.5
default_color = Color(0.152941, 0.0980392, 0.0980392, 1)

[node name="RightLine" type="Line2D" parent="."]
points = PackedVector2Array(-59, -99, -16, -99)
width = 5.5
default_color = Color(0.152941, 0.0980392, 0.0980392, 1)

[node name="TouchArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea"]
position = Vector2(0, -99)
shape = SubResource("CircleShape2D_hftfm")

[node name="Center" type="Marker2D" parent="."]
position = Vector2(0, -99)

[node name="ShotArc" type="Line2D" parent="."]
default_color = Color(0.909804, 0.909804, 0.909804, 0.905882)

[connection signal="input_event" from="TouchArea" to="." method="_on_touch_area_input_event"]
